--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -15,14 +15,22 @@
 </div>
 
 <div>
-    <!--<ul>-->
-        <!--<li th:each="file : ${files}">-->
-            <!--<a th:href="${file}" th:text="${file}" />-->
-        <!--</li>-->
-    <!--</ul>-->
     <ul>
-        <li th:each="file : ${files2}">
-            <a th:href="${file}" th:text="${file}" />
+        <li th:each="document : ${documents}">
+            <a th:href="${document.downloadLink}" th:text="${document.fileName}" />
+            <form method="POST" th:object="${document}" action="/update">
+                <input type="hidden" id="id" name="id" th:value="*{id}"/>
+
+                <input type="text" id="entranceDate" name="entranceDate" th:value="*{entranceDate}" />
+                <input type="text" id="entrancePerson" name="entrancePerson" th:value="*{entrancePerson}" />
+                <input type="text" id="approvalDate" name="approvalDate" th:value="*{approvalDate}" />
+                <input type="text" id="approvalPerson1" name="approvalPerson1" th:value="*{approvalPerson1}" />
+                <input type="text" id="approvalPerson2" name="approvalPerson2" th:value="*{approvalPerson2}" />
+                <input type="text" id="shippmentDate" name="shippmentDate" th:value="*{shippmentDate}" />
+                <input type="text" id="comment" name="comment" th:value="*{comment}" />
+
+                <input type="submit" value="Save" />
+            </form>
         </li>
     </ul>
 </div>
