--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,12 +6,20 @@ td {
     vertical-align: top;
 }
 
-.upload-button {
+/*.upload-button {*/
+    /*opacity: 0;*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*height: 100%;*/
+/*}*/
+
+input[type="file"] {
     opacity: 0;
-    margin: 0;
-    padding: 0;
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
+    pointer-events: none;
+    width: 1px;
+    height: 1px;
 }
