--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -29,19 +29,16 @@
     </ul>
 </div>
 
-<nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-        <a style="max-width: 100px" id="logo-container" href="#" class="brand-logo">
-            <img class="responsive-img" th:src="@{/img/alerilogo.jpg}"/>
-        </a>
-        <ul class="right hide-on-med-and-down">
-            <li><a href="/">Documents</a></li>
-        </ul>
+<nav class="blue" role="navigation">
+    <div class="nav-wrapper">
+        <div class="container">
+            <a href="/" style="text-align: center" class="brand-logo">Aleri Dokumenten Manager</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/">Dokumenten</a></li>
 
-        <ul id="nav-mobile" class="sidenav">
-            <li><a href="/">Documents</a></li>
-        </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">Menu</i></a>
+            </ul>
+        </div>
+
     </div>
 </nav>
 
