--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -47,29 +47,29 @@
 
         <div class="row" >
             <div class="col s12 center">
+                <!--<div>-->
+                    <!--<ul>-->
+                        <!--<li th:each="document : ${documents}">-->
+                            <!--<a th:href="${document.downloadLink}" th:text="${document.fileName}" />-->
+                            <!--<form method="POST" th:object="${document}" action="/update">-->
+                                <!--<input type="hidden" id="id" name="id" th:value="*{id}"/>-->
+
+                                <!--<input type="text" id="entranceDate" name="entranceDate" th:value="*{entranceDate}" />-->
+                                <!--<input type="text" id="entrancePerson" name="entrancePerson" th:value="*{entrancePerson}" />-->
+                                <!--<input type="text" id="approvalDate" name="approvalDate" th:value="*{approvalDate}" />-->
+                                <!--<input type="text" id="approvalPerson1" name="approvalPerson1" th:value="*{approvalPerson1}" />-->
+                                <!--<input type="text" id="approvalPerson2" name="approvalPerson2" th:value="*{approvalPerson2}" />-->
+                                <!--<input type="text" id="shippmentDate" name="shippmentDate" th:value="*{shippmentDate}" />-->
+                                <!--<input type="text" id="comment" name="comment" th:value="*{comment}" />-->
+
+                                <!--<input type="submit" value="Save" />-->
+                            <!--</form>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+
                 <div>
-                    <ul>
-                        <li th:each="document : ${documents}">
-                            <a th:href="${document.downloadLink}" th:text="${document.fileName}" />
-                            <form method="POST" th:object="${document}" action="/update">
-                                <input type="hidden" id="id" name="id" th:value="*{id}"/>
-
-                                <input type="text" id="entranceDate" name="entranceDate" th:value="*{entranceDate}" />
-                                <input type="text" id="entrancePerson" name="entrancePerson" th:value="*{entrancePerson}" />
-                                <input type="text" id="approvalDate" name="approvalDate" th:value="*{approvalDate}" />
-                                <input type="text" id="approvalPerson1" name="approvalPerson1" th:value="*{approvalPerson1}" />
-                                <input type="text" id="approvalPerson2" name="approvalPerson2" th:value="*{approvalPerson2}" />
-                                <input type="text" id="shippmentDate" name="shippmentDate" th:value="*{shippmentDate}" />
-                                <input type="text" id="comment" name="comment" th:value="*{comment}" />
-
-                                <input type="submit" value="Save" />
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-
-                <div>
-                    <table class="responsive-table highlight striped">
+                    <table class="responsive-table highlight">
                         <thead>
                         <tr>
                             <th>Id</th>
@@ -83,21 +83,56 @@
                         </thead>
 
                         <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>file1</td>
+                        <tr th:each="document : ${documents}">
+                            <form method="POST" th:object="${document}" action="/update">
+                                <input type="hidden" id="id" name="id" th:value="*{id}"/>
+                                <td th:text="${document.id}"></td>
+                                <td th:text="${document.fileName}"></td>
+                                <td>
+                                    <div class="input-field inline">
+                                        <input id="entrancePerson" type="text" name="entrancePerson" th:value="*{entrancePerson}" />
+                                        <label for="entrancePerson">Name</label>
+                                    </div>
+                                    <div class="input-field inline">
+                                        <input id="entranceDate" type="text" name="entranceDate" class="datepicker" th:value="*{entranceDate}" />
+                                        <label for="entranceDate">Datum</label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="input-field inline">
+                                        <input id="approvalDate" type="text" name="approvalDate" class="datepicker" th:value="*{approvalDate}" />
+                                        <label for="approvalDate">Datum</label>
+                                    </div>
+                                    <div class="input-field inline">
+                                        <input id="approvalPerson1" type="text" name="approvalPerson1" th:value="*{approvalPerson1}" />
+                                        <label for="approvalPerson1">Sachlich richtig</label>
+                                    </div>
+                                    <div class="input-field inline">
+                                        <input id="approvalPerson2" type="text" name="approvalPerson2" th:value="*{approvalPerson2}" />
+                                        <label for="approvalPerson2">Freigegeben</label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="input-field inline">
+                                        <input id="shippmentDate" type="text" name="shippmentDate" class="datepicker" th:value="*{shippmentDate}" />
+                                        <label for="shippmentDate">Datum</label>
+                                    </div>
+                                </td>
+                                <td><div class="input-field inline">
+                                    <input id="comment" type="text" name="comment" th:value="*{comment}" />
+                                    <label for="comment">Komemntar</label>
+                                </div></td>
+                                <input style="width: 0; height: 0; opacity: 0" type="submit" value="Save" />
+                            </form>
                             <td>
-                                <p>a</p>
-                                <p>b</p>
+                                <form method="POST" action="/save">
+                                    <input type="hidden" id="id" name="id" th:value="*{id}"/>
+                                    <input type="submit" value="Save" />
+                                    <button class="btn btn-flat" type="submit" name="action"><i class="material-icons">delete</i></button>
+                                </form>
+                                <a class="btn-flat" th:href="${document.downloadLink}"><i class="material-icons">cloud_download</i></a>
+                                <!--<a th:href="${document.downloadLink}" th:text="${document.fileName}" />-->
                             </td>
-                            <td>
-                                <p>a</p>
-                                <p>b</p>
-                                <p>b</p>
-                            </td>
-                            <td>1</td>
-                            <td>actions</td>
-                            <td>comment</td>
                         </tr>
                         </tbody>
                     </table>
