--- a/src/main/resources/templates/documentEdit.html
+++ b/src/main/resources/templates/documentEdit.html
@@ -57,7 +57,7 @@
                             <label for="entrancePerson">Wer</label>
                         </div>
                         <div class="input-field col s6">
-                            <input type="text" id="entranceDate" name="entranceDate" th:value="*{entranceDate}" />
+                            <input type="text" id="entranceDate" class="datepicker" name="entranceDate" th:value="*{entranceDate}" />
                             <label for="entranceDate">Datum</label>
                         </div>
                     </div>
@@ -72,14 +72,14 @@
                             <label for="approvalPerson2">Freigegeben</label>
                         </div>
                         <div class="input-field col s6">
-                            <input type="text" id="approvalDate" name="approvalDate" th:value="*{approvalDate}" />
+                            <input type="text" id="approvalDate" class="datepicker" name="approvalDate" th:value="*{approvalDate}" />
                             <label for="approvalDate">Datum</label>
                         </div>
                     </div>
                     <h6>Schicken</h6>
                     <div class="row">
                         <div class="input-field col s6">
-                            <input type="text" id="shippmentDate" name="shippmentDate" th:value="*{shippmentDate}" />
+                            <input type="text" id="shippmentDate" class="datepicker" name="shippmentDate" th:value="*{shippmentDate}" />
                             <label for="shippmentDate">Sachlich richtig</label>
                         </div>
                         <div class="input-field col s6">
