--- a/src/main/resources/templates/documentsOverview.html
+++ b/src/main/resources/templates/documentsOverview.html
@@ -23,7 +23,7 @@
                 <label for="fileUploadInput" class="btn-floating orange">
                     <i class="material-icons">attach_file</i>
                 </label>
-                <input class="upload-button" type="file" name="file" id="fileUploadInput" onchange="form.submit()" />
+                <input accept="image/*" capture="camera" class="upload-button" type="file" name="file" id="fileUploadInput" onchange="form.submit()" />
             </form>
         </li>
     </ul>
@@ -47,30 +47,8 @@
 
         <div class="row" >
             <div class="col s12 center">
-                <!--<div>-->
-                    <!--<ul>-->
-                        <!--<li th:each="document : ${documents}">-->
-                            <!--<a th:href="${document.downloadLink}" th:text="${document.fileName}" />-->
-                            <!--<form method="POST" th:object="${document}" action="/update">-->
-                                <!--<input type="hidden" id="id" name="id" th:value="*{id}"/>-->
-
-                                <!--<input type="text" id="entranceDate" name="entranceDate" th:value="*{entranceDate}" />-->
-                                <!--<input type="text" id="entrancePerson" name="entrancePerson" th:value="*{entrancePerson}" />-->
-                                <!--<input type="text" id="approvalDate" name="approvalDate" th:value="*{approvalDate}" />-->
-                                <!--<input type="text" id="approvalPerson1" name="approvalPerson1" th:value="*{approvalPerson1}" />-->
-                                <!--<input type="text" id="approvalPerson2" name="approvalPerson2" th:value="*{approvalPerson2}" />-->
-                                <!--<input type="text" id="shippmentDate" name="shippmentDate" th:value="*{shippmentDate}" />-->
-                                <!--<input type="text" id="comment" name="comment" th:value="*{comment}" />-->
-
-                                <!--<input type="submit" value="Save" />-->
-                            <!--</form>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</div>-->
-
                 <div>
-                    <table class="
-                    highlight">
+                    <table class="highlight">
                         <thead>
                         <tr>
                             <th>Id</th>
