--- a/src/main/resources/templates/documentEdit.html
+++ b/src/main/resources/templates/documentEdit.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/materializecss/1.0.0/css/materialize.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
-    <!--<link rel='stylesheet' href='/webjars/bootstrap/3.1.0/css/bootstrap.min.css'>-->
 
 </head>
 <body>
@@ -17,7 +16,7 @@
         <i class="large material-icons">add</i>
     </a>
     <ul>
-        <li><a class="btn-floating green"><i class="material-icons">camera</i></a></li>
+        <!--<li><a class="btn-floating green"><i class="material-icons">camera</i></a></li>-->
         <li>
             <form id="fileUploadForm" method="POST" enctype="multipart/form-data" action="/">
                 <label for="fileUploadInput" class="btn-floating orange">
@@ -35,10 +34,8 @@
             <a href="/" style="text-align: center" class="brand-logo">Aleri Dokumenten Manager</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/">Dokumenten</a></li>
-
             </ul>
         </div>
-
     </div>
 </nav>
 
@@ -80,7 +77,7 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <input type="text" id="shippmentDate" class="datepicker" name="shippmentDate" th:value="*{shippmentDate}" />
-                            <label for="shippmentDate">Sachlich richtig</label>
+                            <label for="shippmentDate">Postweg</label>
                         </div>
                         <div class="input-field col s6">
                             <input type="text" id="comment" name="comment" th:value="*{comment}" />
@@ -89,7 +86,7 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
-                            <button class="btn blue waves-effect waves-light" type="submit" name="action">Sparen
+                            <button class="btn blue waves-effect waves-light" type="submit" name="action">Speichern
                                 <i class="material-icons right">send</i>
                             </button>
                             <a class="btn-flat blue-text" th:href="${document.downloadLink}"><i class="material-icons">cloud_download</i></a>
